NYCCHKBK-5087 - Updated the create alerts confirmation screen error message.  Fixed theming to correct alignment of error message.
Former-commit-id: ca26a1cc53eca6ad64d781a8aa46e1c0506cc0d1 [formerly ca26a1cc53eca6ad64d781a8aa46e1c0506cc0d1 [formerly ca26a1cc53eca6ad64d781a8aa46e1c0506cc0d1 [formerly 3009d7c39026a68afe7bbfee20ebd527a364a83f]]]
Former-commit-id: 8d8583f12ff88c119671dc979a384a174588a4b3
Former-commit-id: 3a08eb185518baa1e0dc4c6b16b5543141d6cbe0
Former-commit-id: 426d625a3ae7ada29a2e359e36795c8f4ca409d3

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -1253,6 +1253,7 @@ span.create-alert-results-loading p {
 
 div.create-alert-schedule-alert {
     margin-left: 40px;
+    clear: both;
 }
 
 div.create-alert-submit {
